update readme, add timing module and remove left over preview commands